--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ Build Date :
     
     section.divider-wthree-slider {
         padding: 100px 0;
-        background: url(../images/about.jpg) no-repeat;
+        background: url(../images/bg_6.jpg) no-repeat;
         background-attachment: fixed;
         font-weight: 700;
         background-size: 100% 100%;
